# sleep

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: data.json  index.html
src/sleep/: auth.py  cli.py  fitbit.py
ui/: index.html
